--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #696;
+  background-color: #1E98B9;
   color: #fff;
   box-shadow: 7px 7px 12px 0 rgba(0, 0, 0, 0.2);
   border-radius: 3px;
